[MOSIP-21339] Fixed the banner and the text alignment issues in retrieve lost RID page when the text direction is rtland the some changes in i18n translation files

--- a/admin-ui/src/app/features/lost-rid-status/lost-rid-status/lost-rid-status.component.scss
+++ b/admin-ui/src/app/features/lost-rid-status/lost-rid-status/lost-rid-status.component.scss
@@ -135,3 +135,8 @@ h3 {
     color: #ffffff!important;
 }
 
+:dir(rtl) .lost-rid-status-card {
+    padding-left: 50px !important;
+    padding-right: 50px !important;
+}
+
