--- a/admin-ui/src/styles.scss
+++ b/admin-ui/src/styles.scss
@@ -68,7 +68,7 @@ h3 {
     margin:0px !important;
   }
   #flex-container {
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     /* max-height: 87vh; */
     padding-bottom: 20px;
